# crystalgrw

./: .gitignore  LICENSE  README.md  environment.yaml  pyproject.toml
conf/: mp_condition.yaml  mp_example.yaml
conf/data/: mp.yaml
data/: cpg.json
scripts/: compute_metrics.py  evaluate.py  train.py
src/crystalgrw/cli/: compute_metrics.py  evaluate.py  train.py
src/crystalgrw/common/: __init__.py  data_utils.py  datamodule.py  dataset.py  eval_utils.py  manifolds.py  model_utils.py  stats.py
src/crystalgrw/gnn/dimenet/: dimenet.py  dimenet_utils.py
src/crystalgrw/gnn/equiformer_v2/: equiformer_v2.py  input_block.py  so2_ops.py
src/crystalgrw/gnn/equiformer_v2/common/: utils.py
src/crystalgrw/gnn/equiformer_v2/utils/: base.py
src/crystalgrw/gnn/gemnet/: gemnet.py
src/crystalgrw/gnn/gemnet/layers/: atom_update_block.py  embedding_block.py
src/crystalgrw/models/: base.py  decode_stats.py  decoders.py  models.py  predict_property.py  sde.py  utils.py
src/crystalgrw/models/encoders/: __init__.py  dimenet.py  gemnet.py
