[build-system]
requires = ["setuptools >= 62.6"]
build-backend = "setuptools.build_meta"

[project]
name = "crystalgrw"
authors = [
    {name = "Teerachote Pakornchote"},
    {name = "Krit Tangsongcharoen"},
]
description = "CrystalGRW: Generative modeling of crystal structures via geodesic random walks"
readme = "README.md"
requires-python = ">= 3.9"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.9",
    "Environment :: GPU :: NVIDIA CUDA :: 12 :: 12.3",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/trachote/crystalgrw"